test/files/pos/not-possible-cause.scala
object Foo {
  def foo[A <: Product](a: A): Unit = { type X = a.type }
}
