test/files/neg/t7501/t7501_2.scala
object Test {
  def foo(a: A) = a.name

  type TP = X // already failed before this fix
}
